Closed Bug 1340118 Opened 7 years ago Closed 7 years ago

Fix an wrong use of ErrorResult in nsContentUtils::TransferableToIPCTransferable

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file)

      No description provided.
Attached patch blob_error.patchSplinter Review
Assignee: nobody → amarchesini
Attachment #8838010 - Flags: review?(bugs)
Attachment #8838010 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c8b963f03d37
Fix an wrong use of ErrorResult in nsContentUtils::TransferableToIPCTransferable, r=smaug
https://hg.mozilla.org/mozilla-central/rev/c8b963f03d37
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: