Bug 1340118 - Fix an wrong use of ErrorResult in nsContentUtils::TransferableToIPCTransferable, r=smaug